# internal/router/service_router.go
@@ -19,8 +19,13 @@ func ServiceRegister(router *gin.Engine, db *gorm.DB) {
 
 		serviceRouter.GET("/service_list", controller.ServiceList)
 		serviceRouter.GET("/service_delete", controller.ServiceDelete)
+		serviceRouter.GET("/service_detail", controller.ServiceDetail)
+		serviceRouter.GET("/service_stat", controller.ServiceStat)
 		serviceRouter.POST("/service_add_http", controller.ServiceAddHttp)
 		serviceRouter.POST("/service_update_http", controller.ServiceUpdateHttp)
-		serviceRouter.GET("/service_detail", controller.ServiceDetail)
+		serviceRouter.POST("/service_add_tcp", controller.ServiceAddTcp)
+		serviceRouter.POST("/service_update_tcp", controller.ServiceUpdateTcp)
+		serviceRouter.POST("/service_add_grpc", controller.ServiceAddGrpc)
+		serviceRouter.POST("/service_update_grpc", controller.ServiceUpdateGrpc)
 	}
 }
